# google_auth_verification

./: Cargo.toml  README.md
src/: auth.rs  main.rs
