[package]
name = "google_auth_verifier"
version = "0.1.4"
edition = "2021"
authors = ["Hai Nguyen <https://github.com/helloimhai>"]
description = "Small library to quickly verify tokens provided by google auth"
repository = "https://github.com/helloImHai/google_auth_verification"
keywords = ["google", "authentication", "verification"]
categories = ["authentication"]
exclude = ["src/main.rs"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.3.0"
lru = "0.12.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
reqwest = { version ="0.12.5" , features = ["blocking", "json"]}
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }

[lib]
